src/objects/Monthly_Target__c.object
<CustomObject>
    <description>This object contains the monthly search and survey targets. It is global for all CKWs. The Start Date field indicates when these targets go into effect. Payment calculations are expected to use the Monthly Target object with the newest Start Date.</description>
    <fields>
        <fullName>Search_Target__c</fullName>
        <description>The number of searches that CKWs are expected to perform this month.</description>
        <label>Search Target</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>The date that these targets go into effect. We need this field because we may change the targets over time, and we want to keep track of the historical changes. Our algorithm for calculating payment will always look up the most recent version of the targets.</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_Target__c</fullName>
        <description>The number of survey points that CKWs are expected to earn this month.</description>
        <label>Survey Target</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Monthly Target</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Monthly Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Targets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>